--- a/PStyleLogin.css
+++ b/PStyleLogin.css
@@ -50,6 +50,12 @@ body{
     text-decoration: none;
     font-size: 20px;
 }
+#Choice a:hover{
+	background-color: rgba(0,0,0,0.8);
+}
+#Chosen{
+	background: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0), rgba(0,0,0,0.8));
+}
 #header{
 	color: white;
 	background-color: rgb(40,40,40);
@@ -85,10 +91,11 @@ body{
 .errors{
 	width: 92%;
 	margin: 0px auto;
+	margin-top: 7px;
 	border: 1px solid black;
 	border-radius: 5px;
 	padding:10px;
-	color: darkred;
+	color:darkred;
 	background-color: #f5dfdf;
 	text-align: left;
 }
